Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore trunk:


pkgcore 0.8.2: October 1st, 2012

* Fixed pmaint exception for when eclass preloading was enabled.


pkgcore 0.8.1: September 29th, 2012

* Pkgcore now requires snakeoil 0.5.1.

* The cache format 'md5-cache' is now supported (this is what gentoo-x86
  switched to, and what chromeos uses).

* core environment saving functionality was sped up by ~10x.  Basically
  every package will see a gain; simple ones like bsdiff, on my hardware
  went from ~5.2s to 1.5s; diffball from ~12.4 to ~9.2; hell, even
  git (with binpkgs turned off) dropped from 28.5s to 21.1s.
  This improves both --attr environment, and general functionality;
  regen however shouldn't be any faster (already avoided these pathways).

* filter-env gained a --print-funcs option.  Additionally, the underlying
  core has been enhanced so that analysis within a function block is
  possible.

* pquery --attr environment now can work for raw ebuilds, rather than
  just built ebuilds.

* pquery --no-filter was added; this gives you the configured
  (USE rendered) view of a package, just without any visibility
  or license filtering applied.

* Errant newlines in pquery --attr *depends -v output were removed.

* pquery --repo gentoo no longer implies/forces --raw.  Same goes
  for all other places that take repo arguments.
  Now, pquery --repo <some-repo> must be within the specified domain
  unless --raw is forced.

* All pkgcore internal functions now are prefixed with __; ebuilds
  and eclasses should never touch them.

* For performance debugging of EBD, PKGCORE_PERF_DEBUG=1 was added.

* Defined phases is now trusted in full, and used to control exactly
  what phases are actually ran.  This in conjunction w/ some relaxation
  of a few protections (namely, if pkgcore just generated the env dump,
  and we know it's from our version/machinery, then we can directly