@@ -6,6 +6,10 @@ See ChangeLog for full commit logs; this is summarized/major changes.
 
 pkgcore trunk:
 
+pkgcore 0.8.3: October 4th, 2012
+
+* Fixed bug where default phases weren't guranteed to be ran.
+
 
 pkgcore 0.8.2: October 1st, 2012
 
